Add ClearOrder Button

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,11 @@
-APP_NAME=Laravel
+APP_NAME="Alternativa"
+APP_DEV="Phoenix"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:rYK57O+lhZz3y1JaPBh7sGitmfhVLRAC3N97tixOgVo=
 APP_DEBUG=true
 APP_URL=http://localhost
+
+TIMEZONE = "America/Sao_Paulo"
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
@@ -10,16 +13,22 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
+DB_DATABASE=
+DB_USERNAME=
 DB_PASSWORD=
 
-BROADCAST_DRIVER=log
-CACHE_DRIVER=file
-FILESYSTEM_DRIVER=local
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
+
+BROADCAST_DRIVER=pusher
+CACHE_DRIVER=file
+FILESYSTEM_DRIVER=local
+
+PUSHER_APP_ID=12345 
+PUSHER_APP_KEY=12345
+PUSHER_APP_SECRET=12345
+PUSHER_APP_CLUSTER=mt1
 
 MEMCACHED_HOST=127.0.0.1
 
@@ -27,14 +36,17 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
+
+MAIL_DRIVER=smtp
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_HOST=
+MAIL_PORT=
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="${APP_NAME}"
+
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
@@ -42,10 +54,7 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
-PUSHER_APP_CLUSTER=mt1
-
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+APP_DEPLOY_SECRET=
