--- a/composer.json
+++ b/composer.json
@@ -22,9 +22,11 @@
         "symfony/process": "^5.3"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.6",
         "bennett-treptow/laravel-migration-generator": "^3.2",
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
+        "kitloong/laravel-migrations-generator": "^5.0",
         "laravel/breeze": "^1.3",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.2",
